syntax = "proto3";
package peercommands;

message PeerAddReq {
  string Name = 1;
  repeated string Addresses = 2;
}

message PeerAddResp {
  int32 OpRet = 1;
  string OpError = 2;
  string UUID = 3;
  string PeerName = 4;
}


message PeerGenericResp {
  int32 OpRet = 1;
  string OpError = 2;
}

message PeerDeleteReq {
  string ID = 1;
}

message EtcdConfigReq {
 string EtcdName = 1;
 string InitialCluster = 2;
 string ClusterState = 3;
 bool DeletePeer = 4;
}

service PeerService {
  rpc ValidateAdd(PeerAddReq) returns(PeerAddResp) {}
  rpc ValidateDelete(PeerDeleteReq) returns(PeerGenericResp) {}
  rpc ExportAndStoreETCDConfig(EtcdConfigReq) returns(PeerGenericResp) {}
}
